# utils

./: .gitignore  .poutine.yml  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  setup.py  tox.ini
.github/: README.md  actionlint.yaml  dependabot.yml  pinact.yaml  zizmor.yaml
.github/actions/python_setup/: action.yaml
.github/workflows/: actionlint.yaml  dependabot_merge.yaml  notebook-testing.yaml  test_notebook.yaml  unit-testing.yaml
examples/: Basic Usage.ipynb  Basic_Usage.ipynb  code_summarization_colab.ipynb
granite/: notebook_utils.py
ibm_granite_community/: colab_utils.py  langchain_utils.py  notebook_utils.py
recipes/Components/: Langchain_Embeddings_Models.ipynb  Langchain_LLMs.ipynb  Langchain_Vector_Stores.ipynb
recipes/Getting_Started/: Getting_Started_with_Ollama.ipynb  Getting_Started_with_Replicate.ipynb  Getting_Started_with_WatsonX.ipynb
src/ibm_granite_community/: notebook_utils.py
src/ibm_granite_community/langchain/: __init__.py  tokenizer_chat.py  utils.py
src/ibm_granite_community/langchain/chains/combine_documents/: __init__.py  documents_chain.py
src/ibm_granite_community/langchain/prompts/: __init__.py  tokenizer_chat.py
test/: test_notebook_utils.py
tests/: conftest.py  test_documents_chain.py  test_notebook_utils.py  test_tokenizer_chat.py
