# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=70.1.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ibm-granite-community-utils"
authors = [{ name = "The IBM Granite Community Team", email = "granite.cookbooks@ibm.com" }]
description = "A package of utility functions for IBM Granite Community notebooks."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["granite", "ibm", "ai", "llm", "langchain", "rag", "notebooks"]
dependencies = [
    "python_dotenv>=1.0.0",
    "langchain_core>=1.0.0",
    "typing_extensions>=4.0.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ibm-granite-community/utils"
documentation = "https://github.com/ibm-granite-community/utils#readme"
source = "https://github.com/ibm-granite-community/utils"
issues = "https://github.com/ibm-granite-community/utils/issues"

[project.optional-dependencies]
tokenizer_chat = ["transformers>=4.40.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest_asyncio>=0.23.0",
    "assertpy>=1.1",
    "types_assertpy>=1.1.0",
    "transformers>=4.40.0",
    "jinja2>=3.1.0",
    "ruff>=0.4.0",
    "pyrefly>=0.1.0",
]

[tool.uv]
exclude-newer = "1 week" # cool down period for new versions

[tool.setuptools_scm]
version_file = "src/ibm_granite_community/_version.py"
local_scheme = "no-local-version"                   # do not include +gREV local version, required for Test PyPI upload

[tool.pyrefly]
project-includes = ["src", "tests"]
project-excludes = ["**/src/ibm_granite_community/_version.py"]
python-version = "3.11"
preset = "strict"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["src/ibm_granite_community/_version.py"]
line-length = 180

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "Q",   # flake8-quotes
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "N",   # pep8-naming
]
